--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 streamlit>=1.32
 openai>=1.0.0
 python-dotenv>=1.0.0
+pdfplumber>=0.10.0
+python-docx>=1.0.0
+python-pptx>=0.6.0
+requests>=2.31.0
+beautifulsoup4>=4.12.0
